deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
  namespace: nodejs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      containers:
      - name: nodejs-app
        image: 261358762045.dkr.ecr.us-east-1.amazonaws.com/nodejs-app:23
        ports:
        - containerPort: 3000
