service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
  namespace: nodejs
spec:
  selector:
    app: nodejs-app
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
